# mlir

examples/: CMakeLists.txt
examples/toy/: CMakeLists.txt
examples/toy/Ch1/include/toy/: AST.h  Lexer.h  Parser.h
examples/toy/Ch2/include/toy/: Ops.td  Parser.h
examples/toy/Ch2/mlir/: MLIRGen.cpp
examples/toy/Ch3/: CMakeLists.txt
examples/toy/Ch3/include/toy/: Ops.td
examples/toy/Ch3/mlir/: Dialect.cpp  ToyCombine.cpp
examples/toy/Ch4/: CMakeLists.txt  toyc.cpp
examples/toy/Ch4/include/toy/: CMakeLists.txt  Ops.td
examples/toy/Ch4/mlir/: Dialect.cpp  MLIRGen.cpp
examples/toy/Ch5/: CMakeLists.txt  toyc.cpp
examples/toy/Ch5/include/toy/: CMakeLists.txt  Ops.td
examples/toy/Ch5/mlir/: LowerToAffineLoops.cpp  ShapeInferencePass.cpp
